# PCIe_Pool

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
benchmarks/: bandwidth_pool.py  daemon_smoke.py  daemon_support.py  inference_offload_sim.py  inference_workload_sim.py  kv_offload.py  model_loading.py  paper_validation.py  phase7_acceptance_inventory.py  phase7_bundle_gate.py  phase7_compare.py  phase7_evidence.py  phase7_ingest_artifacts.py  phase7_result_check.py  phase7_server_run.py  prefix_restore_poc.py  real_model_sidecar_restore.py  summarize_result.py  training_offload.py  tune_transfer.py
cpp/: CMakeLists.txt
cpp/include/turbobus/: dummy_compute.h  executor.h  planner.h  profiler.h  runtime.h  topology.h  types.h
cpp/src/: dummy_compute_cuda.cu  executor_cuda.cu  planner.cpp  profiler_cuda.cu  pybind.cpp  runtime.cpp  topology_cuda.cpp
docs/: NEXT_STEPS.md  PHASE0_CONTRACT_INVENTORY.md  PHASE6_WORKLOAD_BOUNDARY_INVENTORY.md  PHASE7_EVALUATION_MATRIX.md  PROGRESS.md  TURBOBUS_ROADMAP.md  benchmark_notes.md  design.md  real_framework_connector.md  real_inference_poc.md  vllm_integration.md  vllm_poc.md
examples/: framework_kv_slot_adapter.py  torch_tensor_fetch.py  vllm_introspect.py  vllm_kv_slot_adapter.py  vllm_probe.py  vllm_turbobus_connector.py  vllm_turbobus_kv_connector.py  vllm_turbobus_kv_connector_sweep.py  vllm_turbobus_restore.py
test/: README.md
test/cpp/: CMakeLists.txt  bench_pool_bandwidth.cu  test_direct_h2d.cu  test_multi_relay_pool.cu  test_p2p_matrix.cu  test_planner.cpp  test_profiler.cu  test_relay_h2d_p2p.cu
test/python/: test_adapters_package.py  test_backend_cuda.py  test_benchmark_daemon_support.py  test_client_shared_buffer.py  test_client_worker_transfer.py  test_daemon_scheduler.py  test_daemon_smoke.py  test_daemon_socket.py  test_daemon_state.py  test_example_config.py  test_inference_adapters.py  test_model_loading.py  test_offload_store.py  test_paper_validation.py  test_planner_engine.py  test_planner_types.py  test_runtime_handle.py  test_schema.py  test_training_offload.py  test_transfer.py  test_verification.py  test_vllm_connector.py  test_vllm_integration.py  test_vllm_kv_connector.py  test_vllm_kv_connector_example.py  test_vllm_kv_connector_sweep.py  test_worker_cuda_executor.py  (+4 more)
turbobus/: __init__.py  client.py  client_transfer.py  example_config.py  inference.py  model_loading.py  offload_store.py  plan_trace.py  planner_engine.py  planner_types.py  runtime.py  runtime_engine.py  schema.py  training_offload.py  transfer.py  transfer_selector.py  verification.py  vllm.py  vllm_connector.py  vllm_integration.py  vllm_kv_connector.py
(+81 files in other folders)
