[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.11", "cmake>=3.23"]
build-backend = "setuptools.build_meta"

[project]
name = "turbobus"
version = "0.1.0"
description = "Experimental single-node PCIe bandwidth pooling runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["turbobus", "turbobus.adapters", "turbobus.backends", "turbobus.daemon"]

